[package]
name = "bruss_router"
version = "0.1.0"
edition = "2021"

[dependencies]
tt = { path = "../tt", features = ["stats"] }
bruss_config = { path = "../config" }
bruss_data = { path = "../data", features = ["db"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
# geojson = "0.24"
serde = "^1"
polyline = "^0.10"
assert_matches = "1.5"
futures = "0.3"
serde_json = "^1"
mongodb = { workspace = true }
bson = { workspace = true }
uuid = { version = "^1.8", features = ["fast-rng", "v4", "serde"] }
log = "0.4.21"
env_logger = "0.11.3"
chrono-tz = "0.10.0"
async-stream = "0.3.6"
# md5 = "0.7.0"

[dev-dependencies]
rand = "0.8.5"


[[bin]]
name = "bruss_fetch"
path = "src/fetch/main.rs"

[[bin]]
name = "bruss_route"
path = "src/route/main.rs"

